# StoryForge

./: .gitignore  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_UPDATE.md  CHANGELOG.md  CODE_AUDIT_REPORT.md  CODE_AUDIT_REPORT_V4.md  Cargo.toml  DESIGN_SYSTEM.md  DESIGN_SYSTEM_INSTALLED.md  FIXES_SUMMARY.md  IPC_INTERFACE_REPORT.md  KIMI.md  PLAN_Frontstage_Backstage.md  PLAN_task_system.md  PROJECT_IMPROVEMENT_PLAN.md  PROJECT_STATUS.md  README.md  ROADMAP.md  RUN.md  SERVER_DEPLOYMENT.md  SKILLS_INSTALLED.md  SKILLS_INSTALLED.txt  SKILLS_SUMMARY.md  SKILL_INSTALLATION.md  SUPERPOWERS_INSTALLATION.md  TESTING.md  TROUBLESHOOTING.md  deploy.sh  docker-compose.yml  index.html  package-lock.json  package.json  playwright.config.ts  run-dev.ps1  start-dev.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main-capability.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands_v3.rs  intent.rs  lib.rs  main.rs  mock-tauri.js  test_utils.rs
src-tauri/src-tauri/: tauri.conf.json
src-tauri/src/agents/: commands.rs  commentator.rs  distiller.rs  inspector.rs  memory_compressor.rs  mod.rs  novel_creation.rs  orchestrator.rs  outline_planner.rs  plot_analyzer.rs  service.rs  style_mimic.rs  writer.rs
src-tauri/src/analytics/: mod.rs
src-tauri/src/audit/: commands.rs  mod.rs
src-tauri/src/auth/: commands.rs  mod.rs  oauth.rs  session.rs
src-tauri/src/book_deconstruction/: analyzer.rs  chunker.rs  commands.rs  executor.rs  mod.rs  models.rs  parser.rs  repository.rs  service.rs
src-tauri/src/canonical_state/: manager.rs  mod.rs  tests.rs
src-tauri/src/capabilities/: evolution.rs  mod.rs
src-tauri/src/chat/: mod.rs
src-tauri/src/collab/: mod.rs  ot.rs  websocket.rs
src-tauri/src/config/: commands.rs  mod.rs  settings.rs  settings_tests.rs  studio_manager.rs
src-tauri/src/creative_engine/: context_builder.rs  continuity.rs  foreshadowing.rs  mod.rs  payoff_ledger.rs
src-tauri/src/db/: connection.rs  mod.rs  models.rs  models_v3.rs  repositories.rs  repositories_tests.rs  repositories_v3.rs
src-tauri/src/embeddings/: embedding.rs  mod.rs  provider.rs
src-tauri/src/evolution/: analyzer.rs  mod.rs  reviewer.rs  updater.rs
src-tauri/src/export/: epub.rs  mod.rs  pdf.rs
src-tauri/src/llm/: adapter.rs  anthropic.rs  commands.rs  mod.rs  ollama.rs  openai.rs  prompt.rs  service.rs
src-tauri/src/mcp/: client.rs  mod.rs  server.rs  transport.rs  types.rs
src-tauri/src/memory/: hybrid_search.rs  ingest.rs  mod.rs  multi_agent.rs  query.rs  retention.rs  tokenizer.rs
src-tauri/src/planner/: bootstrap.rs  executor.rs  mod.rs  swarm.rs  template_learning.rs
src-tauri/src/prompts/: engine.rs  evolver.rs  mod.rs
src-tauri/src/router/: cost.rs  mod.rs  model.rs  router.rs
src-tauri/src/skills/: builtin.rs  executor.rs  loader.rs  mod.rs  registry.rs
src-tauri/src/state/: manager.rs  mod.rs  schema.rs
src-tauri/src/subscription/: commands.rs  mod.rs
src-tauri/src/task_system/: commands.rs  executor.rs  heartbeat.rs  integration_tests.rs  mod.rs  models.rs  repository.rs  scheduler.rs  service.rs  tests.rs
src-tauri/src/updater/: mod.rs
src-tauri/src/utils/: file.rs  mod.rs  text.rs  validation.rs  validation_tests.rs
src-tauri/src/vector/: mod.rs  (+1 more)
(+281 files in other folders)
