[package]
name = "storyforge"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = "1.5"

[dependencies]
tauri = { version = "1.6", features = ["api-all"] }
storyforge-core = { path = "../src-core" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.30", features = ["bundled", "chrono"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
r2d2 = "0.8"
r2d2_sqlite = { version = "0.23", features = ["bundled"] }
once_cell = "1.19"
reqwest = { version = "0.11", features = ["json", "stream"] }
eventsource-stream = "0.2"
futures = "0.3"
async-stream = "0.3"
async-trait = "0.1"
regex = "1.10"
rand = "0.8"
tokio-util = { version = "0.7", features = ["io"] }
serde_yaml = "0.9"
walkdir = "2"
notify = { version = "6.1", default-features = false, features = ["macos_fsevent"] }

# MCP (Model Context Protocol)
rmcp = { version = "0.1", features = ["server", "client"] }

# PDF generation
printpdf = "0.7"

# EPUB generation
epub-builder = "0.7"

# File system
dirs = "5"
log = "0.4"
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }
futures-util = "0.3.32"

# LanceDB - 向量数据库 (待Rust升级后启用)
# lancedb = "0.12"
# arrow-array = "52"
# arrow-schema = "52"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
